# app-technical-test

./: .env  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: test.yml
backend/: Dockerfile
backend/app/: .gitignore  alembic.ini  prestart.sh  pyproject.toml
backend/app/app/: __about__.py  config.py  crud.py  main.py
backend/app/app/alembic/: env.py
backend/app/app/alembic/versions/: 25b15d9292cd_add_contact_table.py
backend/app/app/api/: dependencies.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: contacts.py
backend/app/app/database/: base.py  session.py
backend/app/app/models/: contact.py
backend/app/app/schemas/: contact.py
backend/app/tests/: conftest.py
backend/app/tests/api/: __init__.py
backend/app/tests/api/api_v1/: test_contacts.py
backend/app/tests/crud/: test_contact.py
backend/app/tests/utils/: utils.py
frontend/: Dockerfile  bun.lockb  next.config.mjs  package.json
frontend/app/: layout.js  page.js  providers.js
frontend/app/lib/: api.js
frontend/components/: contact-details.jsx  contact-list.jsx  floating-button.jsx  listbox-wrapper.jsx
scripts/: build.sh  test.sh
